# open-space-toolkit-simulation

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  index.html  python.rst
.devcontainer/: devcontainer.json
.github/workflows/: build-test.yml  release.yml
_autosummary/: ostk.simulation.Component.rst  ostk.simulation.Entity.rst  ostk.simulation.Satellite.rst  ostk.simulation.SatelliteConfiguration.rst  ostk.simulation.Simulator.rst  ostk.simulation.SimulatorConfiguration.rst  ostk.simulation.component.Geometry.rst  ostk.simulation.component.rst  ostk.simulation.rst
_build/html/: .buildinfo  Tutorial.html  cpp.html  genindex.html  index.html  objects.inv  py-modindex.html  python.html  search.html  searchindex.js  sitemap.xml
bindings/python/: CMakeLists.txt  README.md  requirements.txt
bindings/python/docs/: Reference.ipynb
bindings/python/src/: OpenSpaceToolkitSimulationPy.cxx
bindings/python/src/OpenSpaceToolkitSimulationPy/: Component.cpp  Entity.cpp  Payload.cpp  Satellite.cpp  Simulator.cpp  Spacecraft.cpp
bindings/python/src/OpenSpaceToolkitSimulationPy/Component/: Geometry.cpp  State.cpp
bindings/python/src/OpenSpaceToolkitSimulationPy/Utilities/: ArrayCasting.hpp  ComponentHolder.cpp  ShiftToString.hpp
bindings/python/src/OpenSpaceToolkitSimulationPy/Utility/: ArrayCasting.hpp  ComponentHolder.cpp
bindings/python/test/: __init__.py  test_import.py  test_satellite.py  test_simulator.py  test_spacecraft.py
bindings/python/tools/python/: setup.cfg.in  setup.py.in
bindings/python/tools/python/ostk/simulation/: __init__.py
cpp_rst/class/: classostk_1_1simulation_1_1component_1_1_geometry.rst  classostk_1_1simulation_1_1component_1_1_state.rst
docker/development/: Dockerfile
docker/jupyter/: Dockerfile
docker/release/: Dockerfile
docs/: CMakeLists.txt  conf.py  index.html  python.rst
doxygen/html/: header.html
html/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _component_8cpp.html  _component_8cpp.js  _component_8hpp.html  _component_8hpp.js  _component_8hpp_source.html  _component_holder_8cpp.html  _component_holder_8cpp.js  _component_holder_8hpp.html  _component_holder_8hpp.js  _component_holder_8hpp_source.html  _entity_8cpp.html  _entity_8hpp.html  _entity_8hpp_source.html  _geometry_8cpp.html  _geometry_8cpp.js  _geometry_8hpp.html  _geometry_8hpp.js  _geometry_8hpp_source.html  _identifier_8cpp.html  _identifier_8cpp.js  _identifier_8hpp.html  _identifier_8hpp.js  _identifier_8hpp_source.html  _r_e_a_d_m_e_8md.html  _satellite_8cpp.html  _satellite_8cpp.js  _satellite_8hpp.html  _satellite_8hpp.js  _satellite_8hpp_source.html  _simulator_8cpp.html  _simulator_8cpp.js  _simulator_8hpp.html  _simulator_8hpp.js  _simulator_8hpp_source.html  _state_8cpp.html  _state_8hpp.html  _state_8hpp.js  _state_8hpp_source.html  _tutorial_8md.html  (+93 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+32 more)
latex/: _component_8cpp.tex  _component_8hpp.tex  _component_holder_8cpp.tex  _component_holder_8hpp.tex  _entity_8cpp.tex  _entity_8hpp.tex  _geometry_8cpp.tex  _geometry_8hpp.tex  _identifier_8cpp.tex  _identifier_8hpp.tex  _satellite_8cpp.tex  _satellite_8hpp.tex  _simulator_8cpp.tex  _simulator_8hpp.tex  _state_8cpp.tex  _state_8hpp.tex  annotated.tex  classostk_1_1simulation_1_1_component.eps  classostk_1_1simulation_1_1_component.tex  classostk_1_1simulation_1_1_entity.eps  classostk_1_1simulation_1_1_entity.tex  classostk_1_1simulation_1_1_satellite.eps  classostk_1_1simulation_1_1_satellite.tex  classostk_1_1simulation_1_1_simulator.tex  classostk_1_1simulation_1_1component_1_1_geometry.tex  classostk_1_1simulation_1_1component_1_1_state.tex  classostk_1_1simulation_1_1utilities_1_1_component_holder.eps  classostk_1_1simulation_1_1utilities_1_1_component_holder.tex  classostk_1_1simulation_1_1utility_1_1_component_holder.eps  classostk_1_1simulation_1_1utility_1_1_component_holder.tex  dir_0135578efc1637a0e0841daccc698f8a.tex  dir_15dc537fd0f803dd9dfad2db668e4b1a.tex  dir_52078e942845cb0224a214b9f014036b.tex  dir_6768742eeef6d085cc687d1b7f5d1de7.tex  dir_ade627882e27031573474a66229ae354.tex  dir_af651721dd75583fa5eb607d69497d40.tex  dir_b5dedb3e58d71b58be2bb2237804f88f.tex  dir_bc3a67eb8245995bed0029440ffeabd8.tex  dir_c5e0124769b3d8da61de44d5b2068ea9.tex  dir_fdc2ce6839bd9a3b87630c53f2ae038b.tex  (+15 more)
test/: Global.test.hpp  Main.test.cxx  Setup.test.hpp
xml/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.xml  _component_8cpp.xml  _component_8hpp.xml  _component_holder_8cpp.xml  _component_holder_8hpp.xml  _entity_8cpp.xml  _entity_8hpp.xml  _geometry_8cpp.xml  _geometry_8hpp.xml  _identifier_8cpp.xml  _identifier_8hpp.xml  _r_e_a_d_m_e_8md.xml  _satellite_8cpp.xml  _satellite_8hpp.xml  _simulator_8cpp.xml  _simulator_8hpp.xml  _state_8cpp.xml  _state_8hpp.xml  classostk_1_1simulation_1_1_component.xml  classostk_1_1simulation_1_1_entity.xml  classostk_1_1simulation_1_1_satellite.xml  classostk_1_1simulation_1_1_simulator.xml  classostk_1_1simulation_1_1component_1_1_geometry.xml  classostk_1_1simulation_1_1component_1_1_state.xml  classostk_1_1simulation_1_1utility_1_1_component_holder.xml  dir_0135578efc1637a0e0841daccc698f8a.xml  dir_52078e942845cb0224a214b9f014036b.xml  dir_6768742eeef6d085cc687d1b7f5d1de7.xml  dir_ade627882e27031573474a66229ae354.xml  dir_b5dedb3e58d71b58be2bb2237804f88f.xml  dir_bc3a67eb8245995bed0029440ffeabd8.xml  dir_c5e0124769b3d8da61de44d5b2068ea9.xml  dir_fdc2ce6839bd9a3b87630c53f2ae038b.xml  index.xml  indexpage.xml  md__c_o_n_t_r_i_b_u_t_i_n_g.xml  namespaceostk.xml  namespaceostk_1_1simulation.xml  namespaceostk_1_1simulation_1_1component.xml  namespaceostk_1_1simulation_1_1utility.xml  (+4 more)
(+107 files in other folders)
