# Apache License 2.0

## Project Properties

SET (PROJECT_NAME "OpenSpaceToolkitSimulationPy")
SET (PROJECT_DESCRIPTION "Python bindings for Open Space Toolkit / Simulation.")
SET (PROJECT_PACKAGE_NAME "OpenSpaceToolkitSimulationPy")
SET (PROJECT_GROUP "ostk")
SET (PROJECT_SUBGROUP "simulation")
SET (PROJECT_PATH "${PROJECT_GROUP}/${PROJECT_SUBGROUP}")
SET (PROJECT_LICENSE "Apache License 2.0")
SET (PROJECT_VENDOR_ID "com.bremond.lucas")
SET (PROJECT_VENDOR_NAME "Lucas Brémond")
SET (PROJECT_VENDOR_CONTACT "lucas.bremond@gmail.com")
SET (PROJECT_VENDOR_URL "lucas.bremond.info")

## Setup

### Compatibility Check

CMAKE_MINIMUM_REQUIRED (VERSION "3.15" FATAL_ERROR)

### Policies

CMAKE_POLICY (SET "CMP0048" NEW)

### Options

OPTION (BUILD_WHEELS_IN_CMAKE "Build python wheels with CMake." OFF)

## Project Configuration

PROJECT (${PROJECT_NAME} VERSION ${PROJECT_VERSION_STRING} LANGUAGES "C" "CXX")

## Dependencies

### Pybind11

SET (PYBIND11_FINDPYTHON ON)
FIND_PACKAGE (Python REQUIRED COMPONENTS Interpreter Development.Module)

FIND_PACKAGE (pybind11 2.12.0 QUIET)

IF (NOT pybind11_FOUND)
    SET (LOCAL_PYBIND11_DIR "${CMAKE_SOURCE_DIR}/../pybind11-master")
    IF (EXISTS "${LOCAL_PYBIND11_DIR}/CMakeLists.txt")
        ADD_SUBDIRECTORY ("${LOCAL_PYBIND11_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/pybind11-local" EXCLUDE_FROM_ALL)
    ELSE ()
        INCLUDE (FetchContent)
        FetchContent_Declare (
            pybind11
            URL https://github.com/pybind/pybind11/archive/refs/tags/v2.12.0.zip
            DOWNLOAD_EXTRACT_TIMESTAMP TRUE
        )
        FetchContent_MakeAvailable (pybind11)
    ENDIF ()
ENDIF ()

## Target

SET (LIBRARY_NAME ${PROJECT_PACKAGE_NAME})
SET (LIBRARY_TARGET "${LIBRARY_NAME}")

FILE (GLOB_RECURSE PROJECT_SRCS "${PROJECT_SOURCE_DIR}/src/*.cxx")

pybind11_add_module (${LIBRARY_TARGET} MODULE ${PROJECT_SRCS})

TARGET_INCLUDE_DIRECTORIES (${LIBRARY_TARGET} PUBLIC "${CMAKE_SOURCE_DIR}/include")
TARGET_INCLUDE_DIRECTORIES (${LIBRARY_TARGET} PUBLIC "${CMAKE_SOURCE_DIR}/src")
TARGET_INCLUDE_DIRECTORIES (${LIBRARY_TARGET} PUBLIC "${PROJECT_SOURCE_DIR}/include")
TARGET_INCLUDE_DIRECTORIES (${LIBRARY_TARGET} PUBLIC "${PROJECT_SOURCE_DIR}/src")

TARGET_LINK_LIBRARIES (${LIBRARY_TARGET} PRIVATE pybind11::module)
TARGET_LINK_LIBRARIES (${LIBRARY_TARGET} PRIVATE ${SHARED_LIBRARY_TARGET})

TARGET_COMPILE_DEFINITIONS (${LIBRARY_TARGET} PRIVATE VERSION_INFO="${PROJECT_VERSION_STRING}")

IF (MSVC)
    # Work around intermittent MSVC optimizer internal errors when compiling pybind wrappers in Release.
    TARGET_COMPILE_OPTIONS (${LIBRARY_TARGET} PRIVATE $<$<CONFIG:Release>:/Od> $<$<CONFIG:Release>:/Ob0>)
ENDIF ()

SET_TARGET_PROPERTIES (
    ${LIBRARY_TARGET}
    PROPERTIES
        VERSION ${PROJECT_VERSION_STRING}
        SOVERSION ${PROJECT_VERSION_MAJOR}
        OUTPUT_NAME ${PROJECT_PACKAGE_NAME}
        CLEAN_DIRECT_OUTPUT 1
        PREFIX ""
        C_VISIBILITY_PRESET hidden
        CXX_VISIBILITY_PRESET hidden
)

IF (UNIX)
    SET_TARGET_PROPERTIES (
        ${LIBRARY_TARGET}
        PROPERTIES
            BUILD_WITH_INSTALL_RPATH TRUE
            INSTALL_RPATH "$ORIGIN/../lib:$ORIGIN/"
    )
ENDIF ()

INSTALL (TARGETS ${LIBRARY_TARGET} DESTINATION "${INSTALL_LIB}/${PROJECT_PATH}" COMPONENT "python")
INSTALL (FILES "${PROJECT_SOURCE_DIR}/tools/python/${PROJECT_GROUP}/__init__.py" DESTINATION "${INSTALL_LIB}/${PROJECT_GROUP}" COMPONENT "python")
INSTALL (FILES "${PROJECT_SOURCE_DIR}/tools/python/${PROJECT_PATH}/__init__.py" DESTINATION "${INSTALL_LIB}/${PROJECT_PATH}" COMPONENT "python")

## Optional package directory / wheel flow (cross-platform file commands)

SET (PACKAGE_NAME ${PROJECT_PACKAGE_NAME})
SET (PACKAGE_TARGET "${PACKAGE_NAME}-python-package")
SET (PACKAGE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_TARGET}")
SET (PACKAGE_STAMP "${PACKAGE_DIRECTORY}/.stamp")

IF (WIN32)
    SET (PLATFORM "win_amd64")
ELSEIF (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
    SET (PLATFORM "manylinux2014_x86_64")
ELSEIF (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64")
    SET (PLATFORM "manylinux2014_aarch64")
ELSE ()
    SET (PLATFORM "any")
ENDIF ()

SET (EXTENSION "${Python_VERSION_MAJOR}${Python_VERSION_MINOR}")

SET (SETUP_CFG_IN "${CMAKE_CURRENT_SOURCE_DIR}/tools/python/setup.cfg.in")
SET (SETUP_CFG "${CMAKE_CURRENT_BINARY_DIR}/setup.cfg")
CONFIGURE_FILE (${SETUP_CFG_IN} ${SETUP_CFG} @ONLY)

SET (PYPROJECT_TOML_IN "${CMAKE_CURRENT_SOURCE_DIR}/tools/python/pyproject.toml.in")
SET (PYPROJECT_TOML "${CMAKE_CURRENT_BINARY_DIR}/pyproject.toml")
CONFIGURE_FILE (${PYPROJECT_TOML_IN} ${PYPROJECT_TOML} @ONLY)

ADD_CUSTOM_COMMAND (
    OUTPUT ${PACKAGE_STAMP}
    COMMAND ${CMAKE_COMMAND} -E make_directory "${PACKAGE_DIRECTORY}/${PROJECT_PATH}"
    COMMAND ${CMAKE_COMMAND} -E make_directory "${PACKAGE_DIRECTORY}/${PROJECT_GROUP}"
    COMMAND ${CMAKE_COMMAND} -E remove_directory "${PACKAGE_DIRECTORY}/${PROJECT_PATH}/test"
    COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/test" "${PACKAGE_DIRECTORY}/${PROJECT_PATH}/test"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/tools/python/${PROJECT_GROUP}/__init__.py" "${PACKAGE_DIRECTORY}/${PROJECT_GROUP}/__init__.py"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/tools/python/${PROJECT_PATH}/__init__.py" "${PACKAGE_DIRECTORY}/${PROJECT_PATH}/__init__.py"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/requirements.txt" "${PACKAGE_DIRECTORY}/requirements.txt"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/README.md" "${PACKAGE_DIRECTORY}/README.md"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${SETUP_CFG}" "${PACKAGE_DIRECTORY}/setup.cfg"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${PYPROJECT_TOML}" "${PACKAGE_DIRECTORY}/pyproject.toml"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_FILE:${LIBRARY_TARGET}>" "${PACKAGE_DIRECTORY}/${PROJECT_PATH}/"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_FILE:${SHARED_LIBRARY_TARGET}>" "${PACKAGE_DIRECTORY}/${PROJECT_PATH}/"
    COMMAND ${CMAKE_COMMAND} -E touch ${PACKAGE_STAMP}
    DEPENDS ${LIBRARY_TARGET}
    VERBATIM
)

ADD_CUSTOM_TARGET (${PACKAGE_TARGET} DEPENDS ${PACKAGE_STAMP})

IF (BUILD_WHEELS_IN_CMAKE)
    ADD_CUSTOM_TARGET (
        "${PACKAGE_TARGET}-wheel"
        COMMAND ${CMAKE_COMMAND} -E chdir "${PACKAGE_DIRECTORY}" ${Python_EXECUTABLE} -m pip install . --no-deps
        COMMAND ${CMAKE_COMMAND} -E chdir "${PACKAGE_DIRECTORY}" ${Python_EXECUTABLE} -m build --no-isolation -w
        DEPENDS ${PACKAGE_TARGET}
    )
ENDIF ()
